--- a/package.json
+++ b/package.json
@@ -10,14 +10,22 @@
   },
   "private": true,
   "dependencies": {
+    "@alyle/ui": "^13.2.1",
     "@angular/animations": "~13.3.0",
+    "@angular/cdk": "^13.3.9",
     "@angular/common": "~13.3.0",
     "@angular/compiler": "~13.3.0",
     "@angular/core": "~13.3.0",
+    "@angular/fire": "^7.4.1",
     "@angular/forms": "~13.3.0",
+    "@angular/material": "^13.3.9",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "angular-responsive-carousel": "^2.1.2",
+    "chart.js": "^3.8.0",
+    "hammerjs": "^2.0.8",
+    "ng2-charts": "^3.1.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
