--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "app-frontend",
   "version": "0.0.0",
+  "main": "node server.js",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
