--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "app-frontend",
   "version": "0.0.0",
-  "main": "node server.js",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
