--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "dev": "ng serve --port=4200 --watch",
     "start": "node server.js",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
