--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chart.js": "^3.8.0",
     "hammerjs": "^2.0.8",
     "ng2-charts": "^3.1.2",
+    "ngx-device-detector": "^3.0.0",
     "ngx-socket-io": "^4.3.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
