--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular-responsive-carousel": "^2.1.2",
     "chart.js": "^3.9.1",
     "hammerjs": "^2.0.8",
+    "ng-circle-progress": "^1.6.0",
     "ng2-charts": "^3.1.2",
     "ngx-device-detector": "^3.0.0",
     "ngx-drag-drop": "^13.0.0",
