--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "hammerjs": "^2.0.8",
     "ng-circle-progress": "^1.6.0",
     "ng2-charts": "^3.1.2",
+    "ng2-pdf-viewer": "^7.0.2",
     "ngx-device-detector": "^3.0.0",
     "ngx-drag-drop": "^13.0.0",
     "ngx-socket-io": "^4.3.0",
