--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@aws-sdk/client-s3": "^3.303.0",
     "@kolkov/angular-editor": "^3.0.0-beta.0",
     "angular-responsive-carousel": "^2.1.2",
     "chart.js": "^3.9.1",
