--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "start:dev": "ng serve --port=4200 --host 0.0.0.0 --disable-host-check",
     "dev": "ng serve --port=4200 --watch",
     "start": "node server.js",
     "build": "ng build",
@@ -26,6 +27,7 @@
     "@aws-sdk/client-s3": "^3.303.0",
     "@kolkov/angular-editor": "^3.0.0-beta.0",
     "angular-responsive-carousel": "^2.1.2",
+    "aws-sdk": "^2.1347.0",
     "chart.js": "^3.9.1",
     "hammerjs": "^2.0.8",
     "ng-circle-progress": "^1.6.0",
@@ -36,6 +38,7 @@
     "ngx-socket-io": "^4.3.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "uuid": "^9.0.0",
     "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
@@ -45,6 +48,7 @@
     "@angular/compiler-cli": "~13.3.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "@types/uuid": "^9.0.1",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
